# c-template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  environment.yml
src/: CMakeLists.txt  main.c
src/libArith/: CMakeLists.txt  arith.c  arith.h  arith_rc.h
src/libArithPP/: CMakeLists.txt  arithpp.cpp  arithpp.h
test/: CMakeLists.txt  test1.c  test2.cpp
